--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -118,6 +118,21 @@
                                 </li>
                             </ul>
                         </li>
+
+                        <li class="sidebar-list">
+                            <a class="sidebar-link sidebar-title" href="javascript:void(0)">
+                                <i class="ri-user-3-line"></i>
+                                <span>Manager Suppliers</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li>
+                                    <a th:href="@{/manager/suppliers}">List Suppliers</a>
+                                </li>
+                                <li>
+                                    <a th:href="@{/manager/suppliers/add}">Add new supplier</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
 
 
