--- a/src/main/resources/templates/admin/indexa.html
+++ b/src/main/resources/templates/admin/indexa.html
@@ -290,7 +290,7 @@
                                         </thead>
                                         <tbody>
                                         <tr th:each="user : ${users}">
-                                            <td th:text="${user.userId}"></td>
+                                            <td class="text-center" th:text="${user.userId}"></td>
                                             <td th:text="${user.fullName}"></td>
                                             <td th:text="${user.email}"></td>
                                             <td th:text="${user.phone}"></td>
