--- a/src/main/resources/templates/manager/suppliers/add.html
+++ b/src/main/resources/templates/manager/suppliers/add.html
@@ -51,6 +51,8 @@
 </head>
 <body>
 <!-- tap on top start -->
+<div th:if="${success}"  th:text="${success}"></div>
+<div th:if="${error}"  th:text="${error}"></div>
 <div class="tap-top">
     <span class="lnr lnr-chevron-up"></span>
 </div>
@@ -77,7 +79,7 @@
                     </div>
                     <div class="card-body px-4 py-4">
 
-                            <form th:action="@{/manager/suppliers/add}" th:object="${supplier}" enctype="multipart/form-data" method="post">
+                            <form th:action="@{/manager/suppliers/save}" th:object="${supplier}" enctype="multipart/form-data" method="post">
                                 <div class="row g-3">
                                 <div class="col-md-6">
                                     <label class="form-label fw-semibold">Company Name <span class="text-danger">*</span></label>
