feat: Add order tracking functionality and enhance order details view

--- a/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
+++ b/src/main/resources/templates/Admin/ComponentAdmin/PageSidebar.html
@@ -110,12 +110,12 @@
                                 <li>
                                     <a th:href="@{/manager/orders}">Order List</a>
                                 </li>
-                                <li>
-                                    <a th:href="@{/orders/detail}">Order Detail</a>
-                                </li>
-                                <li>
-                                    <a th:href="@{/orders/tracking}">Order Tracking</a>
-                                </li>
+<!--                                <li>-->
+<!--                                    <a th:href="@{/orders/detail}">Order Detail</a>-->
+<!--                                </li>-->
+<!--                                <li>-->
+<!--                                    <a th:href="@{/orders/tracking}">Order Tracking</a>-->
+<!--                                </li>-->
                             </ul>
                         </li>
 
